# POC

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  naming.md
src/: Camera.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Shader.cpp  Shader.hpp  Square.cpp  Square.hpp  Texture.hpp  TextureSquare.cpp  TextureSquare.hpp  Utils.hpp  main.cpp
src/shaders/: default.frag  default.vert  simple.frag  simple.vert  simple.vs  texture_square.vert
test/: main.spec.cpp
